public/posts/K8S/project1/deployment_b.yml
apiVersion: apps/v1
kind: Deployment 
metadata:        
  name: hello-b # Los nombres en los metadata usan las mismas reglas de los dns. No permite guiones bajos (_).  
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: hello-world-b # Deben coincidir con el label. 
  template:
    metadata: 
      labels:          
        app: hello-world-b  
    spec:               
      # ¡Definición del contenedor!
      containers:
      - name: hello-k8s-nginx-b
        image: docker.io/library/hello-web-app:latest
        imagePullPolicy: Never # Le dice que no busque la imagen en una fuente externa.
