public/posts/K8S/project1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx   # Esta anotación es necesaria para que el Ingress Controller sepa qué regla aplicar
  rules:
  - http:
      paths:
      # Definimos la ruta /web
      - path: /
        pathType: Prefix # Coincide con /web, /web/pagina1, etc. # otra ImplementationSpecific
        backend:
          service:
            name: hello-service
            port:
              number: 80
      - path: /b
        pathType: Prefix  
        backend:
          service:
            name: hello-service-b
            port:
              number: 80
